# Image_Prosessor

tasks/admission/: admission.cpp  admission.h
tasks/chocolate/: chocolate.cpp
tasks/fibonacci/: fibonacci.cpp
tasks/image_processor/: CMakeLists.txt  image_processor
tasks/image_processor/src/args/: args.cpp
tasks/image_processor/src/filters/: crop.cpp  edge.cpp  filter.h  grayscale.cpp  matrix_filter.cpp  matrix_filter.h  negative.cpp  registry.h  sharpening.cpp
tasks/image_processor/src/image_format/: bmp.cpp  bmp.h  format.h
tasks/image_processor/src/io/: reader.cpp  reader.h  writer.cpp  writer.h
tasks/image_processor/src/utils/: matrix.h
tasks/is_leap/: is_leap.cpp
tasks/min_divisor/: min_divisor.cpp
tasks/multiplication/: multiplication.cpp
tasks/next_even/: next_even.cpp
tasks/palindrome/: palindrome.cpp
tasks/password/: password.cpp
tasks/provinces/: provinces.cpp
tasks/queue/: queue.cpp  queue.h
tasks/reduce_fraction/: reduce_fraction.cpp
tasks/scorer/: scorer.cpp
tasks/sort_students/: sort_students.cpp
tasks/stack/: stack.cpp  stack.h
tasks/tests_checking/: tests_checking.cpp
